--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>I am github</h1>
-    <p> heyy</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint autem praesentium officia, deserunt sunt quam fuga est similique sequi aut in adipisci doloribus. Dolores itaque molestias tempore magnam ipsam perferendis.</p>
 </body>
 </html>
